--- a/packages/server/public/css/stylesheet.css
+++ b/packages/server/public/css/stylesheet.css
@@ -2787,6 +2787,9 @@ a:not(.block):not([class*='block']):not(.flex):not([class*='flex']) {
   #autocardPopup {
     display: none !important;
   }
+  #autocardTags {
+    display: none !important;
+  }
 }
 
 /* make autocard text more obvious in comments and descriptions */
