--- a/packages/client/src/css/stylesheet.css
+++ b/packages/client/src/css/stylesheet.css
@@ -268,6 +268,9 @@
   #autocardPopup {
     display: none !important;
   }
+  #autocardTags {
+    display: none !important;
+  }
 }
 
 /* make autocard text more obvious in comments and descriptions */
